# mcp-server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.cursor/rules/: extract-duplicates.mdc  github-pr-no-auto-merge.mdc
.github/workflows/: build_image.yml  ci.yml  publish-ghcr.yml  push-ecr.yml
config/: prod.yml  production.yml  staging.yml
src/conekta_mcp/: __main__.py  auth.py  client.py  server.py
src/conekta_mcp/tools/: __init__.py  balance.py  charges.py  checkouts.py  companies.py  customers.py  events.py  metadata.py  order_charge.py  order_checkout.py  order_line_item.py  order_shipping_contact.py  order_shipping_line.py  orders.py  plans.py  refunds.py  subscriptions.py
src/conekta_mcp/transports/: __init__.py  stdio.py  streamable_http.py
tests/: conftest.py  test_auth.py  test_balance.py  test_charges.py  test_checkouts.py  test_client.py  test_companies.py  test_customers.py  test_events.py  test_main.py  test_orders.py  test_plans.py  test_refunds.py  test_server.py  test_subscriptions.py  test_tools_init.py  test_transports.py
